Added Agent reply field variable and getter/setter.